<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:gravity="center">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de_usuario"/>
        <EditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/iniciarsesion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesi_n"/>
        <Button
            android:id="@+id/volver"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/volver"/>
        <ImageView
            android:id="@+id/imagenerror"
            android:src="@drawable/erroricon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="invisible"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>