<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:text="@string/quimicando"
            android:layout_marginBottom="200dp"/>
        <Button
            android:id="@+id/consultar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/consultar"/>
        <Button
            android:id="@+id/quimico"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/qu_mico"/>
        <Button
            android:id="@+id/salir"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/salir"/>
        <TextView
            android:id="@+id/consultas_totales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>