<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdministrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_del_elemento" />

        <EditText
            android:id="@+id/simbolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Simbolo del elemento" />

        <EditText
            android:id="@+id/numatomico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Numero atómico" />

        <EditText
            android:id="@+id/estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Estado del elemento" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/anadirelemento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insertar" />

            <Button
                android:id="@+id/modificarelemento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modificar" />

            <Button
                android:id="@+id/borrarelemento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrar" />
        </LinearLayout>
        <Button
            android:id="@+id/volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volver" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>